# AKiSO

./: README.md
Lista-2/Zadanie-1/: README
Lista-2/Zadanie-2/: README
Lista-2/Zadanie-3/: README
Lista-2/Zadanie-4/: README
Lista-2/Zadanie-5/: Makefile  main.c
Lista-2/Zadanie-6/: potok
Lista-3/Zadanie-1/: skrypt.sh
Lista-3/Zadanie-2/: webtrace.sh
Lista-3/Zadanie-3/: file_info.sh  searchdup
Lista-3/Zadanie-4/: vsh.sh
Lista-4/: CMakeLists.txt
Lista-4/Zadanie-1/: CMakeLists.txt  Makefile  bash.c  setroot.sh
Lista-4/Zadanie-2/: CMakeLists.txt  README  test1.c  test3.c
Lista-4/Zadanie-3-4/: CMakeLists.txt  main.c
Lista-4/Zadanie-5/: CMakeLists.txt  defines.h  defines_kopia.h  klient.c  klient_kopia.c  serwer.c  serwer_kopia.c
Lista-4/Zadanie-6/: main.c
Lista-5/: CMakeLists.txt
Lista-5/Zadanie-1/: CMakeLists.txt  main.c
Lista-5/Zadanie-2/: CMakeLists.txt  myfunctions.c  myfunctions.h  test.c
Lista-5/Zadanie-3/: CMakeLists.txt  main.c  stack.c  stack.h
Lista-5/Zadanie-5/: CMakeLists.txt  filozofowie.c
Lista-6/: CMakeLists.txt  zad1.asm  zad1.obx  zad2.asm  zad2.obx  zad3_1.asm  zad3_1.obx  zad3_2.asm  zad3_2.obx
Lista-6/Zadanie-4/: main.c
Lista-6/Zadanie-6/: CMakeLists.txt  main.c
Lista-7/Zadanie-1/: main.asm
Lista-7/Zadanie-2/: compile  main.asm
Lista-7/Zadanie-3/: README  bof.c  stack.asm
Lista-7/Zadanie-4/: main.asm  main.c
Lista-7/Zadanie-6/: compile  main.asm  main.c
Lista-8/: CMakeLists.txt
Lista-8/Zadanie-1/: CMakeLists.txt  fade.c
Lista-8/Zadanie-2/: CMakeLists.txt  main.c
Lista-8/Zadanie-3/: CMakeLists.txt  main.c  recompile.sh
